spectec/test/elab/neg/type-variant-mixop-collision.spectec
;; Two variant cases share the same leading atom, making them
;; indistinguishable by mixfix shape.

syntax foo =
  | FOO nat
  | FOO int
